force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <description>Individually controlled budgets for customers (i.e. for projects or specific time periods)</description>
    <label>Budget</label>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>