force-app/main/default/objects/Budget__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <description>The top limit that is set for the budget. Baseline to track total amounts (logged and invoiced) against.</description>
    <inlineHelpText>Enter the limit of this budget</inlineHelpText>
    <label>Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>