force-app/main/default/objects/Budget__c/fields/PlannedEndDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedEndDate__c</fullName>
    <description>End date of this budget&apos;s validity</description>
    <inlineHelpText>End Date of budget validity</inlineHelpText>
    <label>Planned End Date</label>
    <type>Date</type>
</CustomField>