force-app/main/default/objects/Budget__c/fields/PlannedStartDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedStartDate__c</fullName>
    <description>Start date of this budget&apos;s validity</description>
    <inlineHelpText>Start Date of budget validity</inlineHelpText>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>