force-app/main/default/objects/Budget__c/fields/TotalAmountInvoiced__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountInvoiced__c</fullName>
    <description>Sum of all invoiced time entries (calculated amount) for this Budget</description>
    <inlineHelpText>Sum of amount for all invoiced Time Entries to this Budget</inlineHelpText>
    <label>Total Amount Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>