force-app/main/default/objects/Budget__c/fields/TotalAmountLogged__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountLogged__c</fullName>
    <description>Sum of all time entries (calculated amount) for this Budget</description>
    <inlineHelpText>Sum of amount for all Time Entries to this Budget</inlineHelpText>
    <label>Total Amount Logged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>